--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	h1 #{title} world
-	ul
+	h1 Articles
+	ul.list-group
 		each article, i in articles
-			li= article.title
+			li.list-group-item= article.title
