--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,5 @@ block content
 	h1 Articles
 	ul.list-group
 		each article, i in articles
-			li.list-group-item= article.title
+			li.list-group-item
+				a(href= "/articles/" + article._id )= article.title
