--- a/views/article.pug
+++ b/views/article.pug
@@ -5,3 +5,4 @@ block content
 	p= article.body
 	br
 	a.btn.btn-default(href='/articles/edit/'+ article._id) Edit
+	a.btn.btn-danger.delete-article(href='#', data-id= article._id) Delete
