--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,8 @@ html
 	head
 		title node and express app
 		link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
+		link(rel='stylesheet' href='/css/style.css')
+
 	body
 		nav.navbar.navbar-inverse
 			.container
@@ -25,3 +27,6 @@ html
 			hr
 			footer
 				p copyright @2017
+		script(src='/bower_components/jquery/dist/jquery.js')
+		script(src='/bower_components/bootstrap/dist/bootstrap.js')
+		script(src='/js/main.js')
